--- a/package.json
+++ b/package.json
@@ -30,5 +30,15 @@
   "bugs": {
     "url": "https://github.com/unforswearing/aliaser/issues"
   },
-  "homepage": "https://github.com/unforswearing/aliaser#readme"
+  "homepage": "https://github.com/unforswearing/aliaser#readme",
+  {
+    "os": [
+      "darwin",
+      "linux"
+    ]
+  },
+  "funding": {
+    "type" : "individual",
+    "url" : "https://www.unforswearing.com/#/"
+  }
 }
